# esp32-lwm2m-gateway

./: .gitmodules  CMakeLists.txt  README.md  X25519_COMPATIBILITY_GUIDE.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  EspHal.h  Kconfig.projbuild  ble.c  ble.h  crypto_test.c  crypto_test.h  crypto_test_fixed.c  crypto_test_fixed.h  device.c  device.h  flash.c  flash.h  idf_component.yml  lora.cpp  lora.h  lwm2m_client.c  lwm2m_client.h  main.c  main.cpp  periodic_sync_demo.c
